# ai-mobile-ui-crawler

./: .gitmodules  README.md  create_desktop_shortcut.bat  create_desktop_shortcut.ps1  pyproject.toml  run_ui.py  test_droidrun_integration.py
.github/: copilot-instructions.md
.planning/: PROJECT.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-error-model-overhaul/: 01-RESEARCH.md
.planning/phases/02-remove-appium/: 02-01-SUMMARY.md  02-02-SUMMARY.md  02-03-SUMMARY.md
.planning/phases/03-step-state-machine-ui-sync/: 03-01-SUMMARY.md  03-03-SUMMARY.md  03-04-SUMMARY.md  03-REVIEW.md
.planning/phases/04-adb-context-guardrails/: 04-01-PLAN.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md
scripts/: start.ps1
src/: =0.4.26
src/mobile_crawler/cli/commands/: crawl.py
src/mobile_crawler/config/: defaults.py
src/mobile_crawler/core/: crawler_event_listener.py  crawler_loop.py  pre_crawl_validator.py  runtime_stats_collector.py
src/mobile_crawler/domain/: adb_action_executor.py  context_guard.py  droidrun_agent_service.py  errors.py  omni_parser_client.py  omniparser_sweep_service.py  prompts.py  step_phase.py  step_phase_models.py  video_recording_manager.py
src/mobile_crawler/domain/providers/: anthropic_adapter.py  registry.py  (+1 more)
src/mobile_crawler/infrastructure/: ai_interaction_service.py  appium_driver.py  database.py  element_group_repository.py  run_repository.py  step_log_repository.py  step_phase_repository.py
src/mobile_crawler/ui/: main_window.py
tests/cli/: test_delete_command.py  test_main.py
tests/config/: test_config_manager.py
tests/core/: test_crawl_state_machine.py  test_crawler_event_listener.py  test_crawler_loop.py  test_droidrun_crawler_loop.py  test_error_handling.py  test_log_sinks.py  test_logging_service.py  test_pre_crawl_validator.py
tests/domain/: test_action_executor.py  test_action_verifier.py  test_droidrun_agent_service.py  test_errors.py  test_models.py  test_omniparser_sweep_service.py  test_report_generator.py  test_step_phase.py  test_traffic_capture_manager.py  test_ui_context.py  test_ui_wait_predicate.py
tests/infrastructure/: test_adb_client.py  test_ai_interaction_service.py  test_element_group_repository.py  test_session_folder_manager.py  test_step_phase_repository.py
tests/ui/: test_run_history_view.py
(+5 files in other folders)
